Fixed #1210 - 2.0: Fix all Lint errors (#1383)